Fix flex exercise 4: image and text with wrap.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
 }
 
 img {
@@ -12,15 +16,21 @@ img {
   font-weight: 900;
 }
 
-/* do not edit this footer */
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 52px;
+.image-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  flex: 0 1 auto;
+  flex-basis: 200px;
+}
+
+.all-images-container {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  background: #eee;
+  gap: 32px;
+}
+
+.text {
+  text-align: center;
 }
